@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-08T08:28:00Z",
-  "count_outdated" : 19,
-  "uniques_outdated" : 4,
+  "timestamp" : "2022-05-12T16:39:39Z",
+  "count_outdated" : 22,
+  "uniques_outdated" : 5,
   "count" : 28,
   "uniques" : 8,
   "views" : [
-    {
-      "timestamp": "2022-04-28T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 1,
