@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-04-28T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 1,
